--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <!-- Logo and navigation bar for the website -->
-        <a href="#" class="logo">Cars.</a>
+        <a href="#" class="logo">AKCars.</a>
 
         <!-- Primary navigation -->
         <nav class="navbar">
